--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=${PORT:8080}
+server.port=8080
 
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.generate-ddl=false
 
